Changing how info flows from tests to testdriver
The ReturnStruct idea was retarded. I'll just add a few getters for
number of tets in category and how many tests failed in a category. The
text part can just be outputted straight to output stream. Cheers.

--- a/C++CourseProject/C++CourseProject/C++CourseProject.vcxproj
+++ b/C++CourseProject/C++CourseProject/C++CourseProject.vcxproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <ClInclude Include="OperatorOverloadTests.h" />
     <ClInclude Include="String.h" />
+    <ClInclude Include="StringConstructorAndInitTests.h" />
     <ClInclude Include="Test.h" />
     <ClInclude Include="TestDriver.h" />
   </ItemGroup>
@@ -71,6 +72,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="OperatorOverloadTests.cpp" />
     <ClCompile Include="String.cpp" />
+    <ClCompile Include="StringConstructorAndInitTests.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="TestDriver.cpp" />
   </ItemGroup>
