Push before major rework
Gotta do a major cleanup...

--- a/C++CourseProject/C++CourseProject/C++CourseProject.vcxproj
+++ b/C++CourseProject/C++CourseProject/C++CourseProject.vcxproj
@@ -62,6 +62,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="MiscellaneousTests.h" />
     <ClInclude Include="OperatorOverloadTests.h" />
     <ClInclude Include="String.h" />
     <ClInclude Include="StringConstructorAndInitTests.h" />
@@ -70,11 +71,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MiscellaneousTests.cpp" />
     <ClCompile Include="OperatorOverloadTests.cpp" />
     <ClCompile Include="String.cpp" />
     <ClCompile Include="StringConstructorAndInitTests.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="TestDriver.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="NewTestCategoryTemplateHeader.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
