--- a/C++CourseProject/C++CourseProject/C++CourseProject.vcxproj.filters
+++ b/C++CourseProject/C++CourseProject/C++CourseProject.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="StringConstructorAndInitTests.cpp">
       <Filter>Source Files\Tests</Filter>
     </ClCompile>
+    <ClCompile Include="MiscellaneousTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="String.h">
@@ -56,5 +59,13 @@
     <ClInclude Include="StringConstructorAndInitTests.h">
       <Filter>Header Files\Tests</Filter>
     </ClInclude>
+    <ClInclude Include="MiscellaneousTests.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="NewTestCategoryTemplateHeader.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
