--- a/C++CourseProject/C++CourseProject/C++CourseProject.vcxproj
+++ b/C++CourseProject/C++CourseProject/C++CourseProject.vcxproj
@@ -62,6 +62,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="IteratorTests.h" />
     <ClInclude Include="MiscellaneousTests.h" />
     <ClInclude Include="OperatorOverloadTests.h" />
     <ClInclude Include="String.h" />
@@ -70,6 +71,7 @@
     <ClInclude Include="TestDriver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="IteratorTests.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MiscellaneousTests.cpp" />
     <ClCompile Include="OperatorOverloadTests.cpp" />
@@ -77,9 +79,6 @@
     <ClCompile Include="StringConstructorAndInitTests.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="TestDriver.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="NewTestCategoryTemplateHeader.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
