--- a/C++CourseProject/C++CourseProject/C++CourseProject.vcxproj.filters
+++ b/C++CourseProject/C++CourseProject/C++CourseProject.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="MiscellaneousTests.cpp">
       <Filter>Source Files\Tests</Filter>
     </ClCompile>
+    <ClCompile Include="IteratorTests.cpp">
+      <Filter>Source Files\Tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="String.h">
@@ -62,10 +65,8 @@
     <ClInclude Include="MiscellaneousTests.h">
       <Filter>Header Files\Tests</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="NewTestCategoryTemplateHeader.txt">
-      <Filter>Source Files</Filter>
-    </Text>
+    <ClInclude Include="IteratorTests.h">
+      <Filter>Header Files\Tests</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
