--- a/C++CourseProject/C++CourseProject/C++CourseProject.vcxproj
+++ b/C++CourseProject/C++CourseProject/C++CourseProject.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -18,13 +18,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -62,6 +62,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="InsertionsAndDeletions.h" />
     <ClInclude Include="IteratorTests.h" />
     <ClInclude Include="MiscellaneousTests.h" />
     <ClInclude Include="OperatorOverloadTests.h" />
@@ -71,6 +72,7 @@
     <ClInclude Include="TestDriver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="InsertionsAndDeletions.cpp" />
     <ClCompile Include="IteratorTests.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MiscellaneousTests.cpp" />
